<resources>
    <string name="app_name">PodCast</string>

    <string name="community_fragment">Community Fragment</string>
    <string name="library_fragment">Library Fragment</string>
    <string name="personal_fragment">Personal Fragment</string>
    <string name="title_discover">Discover</string>
    <string name="title_community">Community</string>
    <string name="title_library">Library</string>
    <string name="title_personal">Personal</string>
    <string name="toolbar_hint">Search shows, RSS feeds, iTunes</string>

    <string name="generic_error">Something went wrong. Please try again later</string>
    <string name="more">MORE</string>
    <string name="top_shows">Top Shows</string>
    <string name="subscribe">Subscribe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_info">Show Info</string>
    <string name="share">Share</string>
    <string name="example">example</string>
    <string name="episodes">%d episodes</string>
    <string name="description">Description</string>
    <string name="hot_comments">Hot Comments</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="retry">Retry</string>
    <string name="data_empty">Data Empty</string>
    <string name="subscribed">Subscribed</string>
</resources>
