<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.techknights.podcast.ui.dashboard.fragment.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.techknights.podcast.ui.dashboard.fragment.CommunityFragment"
        android:label="@string/title_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.techknights.podcast.ui.dashboard.fragment.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_personal"
        android:name="com.techknights.podcast.ui.dashboard.fragment.PersonalFragment"
        android:label="@string/title_personal"
        tools:layout="@layout/fragment_personal" />
</navigation>