<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.activity.PodCastDetailActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:titleEnabled="false"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/contentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="48dp"
                    android:paddingTop="?actionBarSize"
                    app:layout_collapseMode="parallax">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv"
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="@dimen/size_12dp"
                        android:layout_marginStart="@dimen/size_12dp"
                        app:cardElevation="@dimen/size_0dp"
                        app:cardCornerRadius="@dimen/size_4dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <ImageView
                            android:id="@+id/podCastImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/app_name" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/podCastTitle"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_16dp"
                        android:layout_marginEnd="@dimen/size_16dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16sp"
                        tools:text="ABC"
                        app:layout_constraintStart_toEndOf="@id/cv"
                        app:layout_constraintTop_toTopOf="@id/cv"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/podCastBookMarkCount"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_16dp"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/size_4dp"
                        android:drawableStart="@drawable/ic_bookmark_small"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_10sp"
                        tools:text="990"
                        app:layout_constraintStart_toStartOf="@id/podCastTitle"
                        app:layout_constraintTop_toBottomOf="@id/podCastTitle"/>

                    <TextView
                        android:id="@+id/podCastViews"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_14dp"
                        android:gravity="center_vertical"
                        android:drawableStart="@drawable/ic_play"
                        android:drawablePadding="@dimen/size_4dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_10sp"
                        tools:text="990"
                        app:layout_constraintStart_toEndOf="@id/podCastBookMarkCount"
                        app:layout_constraintTop_toTopOf="@id/podCastBookMarkCount"/>

                    <TextView
                        android:id="@+id/subscribe"
                        android:layout_width="@dimen/size_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/size_12dp"
                        android:gravity="center_vertical"
                        android:drawablePadding="@dimen/size_8dp"
                        android:drawableStart="@drawable/ic_bookmark_unselected"
                        android:background="@drawable/subscribe_background"
                        android:paddingTop="@dimen/size_8dp"
                        android:paddingBottom="@dimen/size_8dp"
                        android:paddingStart="@dimen/size_12dp"
                        android:paddingEnd="@dimen/size_12dp"
                        android:fontFamily="@font/quicksand_medium"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_14sp"
                        android:text="@string/subscribe"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_marginBottom="48dp"
                    app:layout_collapseMode="pin"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_48dp"
                    android:layout_gravity="bottom"
                    android:background="@color/white"
                    app:tabSelectedTextColor="@color/tab_color"
                    app:tabTextColor="@color/grey"
                    app:tabIndicatorColor="@color/tab_color" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <FrameLayout
        android:id="@+id/addCommentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:background="#f5f5f5"
        android:padding="@dimen/size_12dp">

        <EditText
            android:id="@+id/addComment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/size_12dp"
            android:paddingBottom="@dimen/size_12dp"
            android:paddingStart="@dimen/size_16dp"
            android:paddingEnd="@dimen/size_16dp"
            android:imeOptions="actionSend"
            android:gravity="center_vertical"
            android:background="@drawable/background_white"
            android:textSize="@dimen/size_16sp"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/add_a_comment"
            android:importantForAutofill="no" />
    </FrameLayout>
</LinearLayout>
